--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ header ul {
   padding: .5rem .4rem;
 }
 header li {
-  font-size: 1.2rem;
+  font-size: 1rem;
   list-style-type: none;
   padding: 0 .2rem .2rem;
 }
